[gd_scene load_steps=7 format=2]

[ext_resource path="res://3dCC.gd" type="Script" id=1]
[ext_resource path="res://crosshair_material.tres" type="Material" id=2]
[ext_resource path="res://assets/Models/Army_Head_Passive.png" type="Texture" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.5

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 3 )

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( -0.688986, -0.688986, -0.688986, 1.37797, 1.37797, 1.37797 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 132, 112, 249, 190, 132, 112, 249, 190, 0, 169, 165, 0, 130, 248, 8, 127, 63, 44, 126, 59, 0, 0, 0, 0, 232, 254, 134, 190, 71, 244, 34, 191, 0, 209, 139, 0, 140, 46, 238, 127, 144, 42, 233, 57, 69, 244, 162, 62, 232, 254, 134, 190, 91, 31, 13, 191, 58, 209, 154, 0, 150, 13, 189, 127, 166, 35, 31, 56, 128, 112, 121, 62, 132, 112, 249, 190, 92, 5, 216, 190, 45, 169, 177, 0, 202, 165, 69, 129, 128, 36, 236, 59, 41, 138, 89, 51, 121, 89, 1, 179, 94, 97, 48, 191, 0, 0, 129, 0, 130, 3, 0, 127, 208, 42, 43, 56, 121, 89, 1, 51, 230, 254, 134, 62, 71, 244, 34, 191, 0, 47, 139, 0, 130, 243, 251, 127, 27, 44, 168, 52, 69, 244, 162, 62, 230, 254, 134, 62, 91, 31, 13, 191, 58, 47, 154, 0, 144, 14, 198, 127, 54, 36, 185, 52, 94, 97, 176, 62, 121, 89, 1, 179, 248, 191, 24, 191, 63, 0, 147, 0, 147, 6, 193, 127, 166, 25, 14, 56, 0, 0, 0, 0, 132, 112, 249, 62, 132, 112, 249, 190, 0, 87, 165, 0, 130, 6, 6, 127, 142, 44, 220, 44, 35, 163, 36, 50, 71, 244, 34, 63, 230, 254, 134, 190, 0, 115, 204, 0, 141, 21, 48, 127, 116, 55, 174, 41, 227, 254, 6, 62, 71, 244, 34, 63, 198, 209, 105, 190, 26, 115, 211, 0, 136, 34, 20, 127, 98, 55, 226, 40, 128, 112, 121, 62, 132, 112, 249, 62, 92, 5, 216, 190, 45, 87, 177, 0, 176, 85, 47, 127, 105, 55, 210, 43, 0, 0, 0, 0, 71, 244, 34, 191, 231, 254, 134, 190, 0, 141, 204, 0, 161, 222, 76, 127, 204, 55, 229, 59, 227, 254, 6, 62, 71, 244, 34, 191, 200, 209, 105, 190, 26, 141, 211, 0, 152, 211, 56, 127, 195, 55, 236, 59, 0, 0, 0, 0, 232, 254, 134, 190, 71, 244, 34, 191, 0, 209, 139, 0, 130, 5, 254, 127, 132, 41, 18, 58, 69, 244, 162, 62, 232, 254, 134, 190, 91, 31, 13, 191, 58, 209, 154, 0, 146, 253, 194, 127, 252, 33, 236, 57, 121, 89, 1, 51, 230, 254, 134, 62, 71, 244, 34, 191, 0, 47, 139, 0, 133, 227, 245, 127, 91, 40, 116, 54, 128, 112, 121, 62, 132, 112, 249, 62, 92, 5, 216, 190, 45, 87, 177, 0, 145, 2, 195, 127, 122, 38, 37, 45, 69, 244, 162, 62, 230, 254, 134, 62, 91, 31, 13, 191, 58, 47, 154, 0, 152, 237, 187, 127, 45, 32, 121, 56, 213, 122, 193, 179, 96, 97, 48, 63, 73, 105, 95, 179, 0, 127, 0, 0, 252, 0, 126, 127, 164, 55, 142, 38, 0, 0, 0, 0, 96, 97, 48, 191, 71, 105, 223, 179, 0, 129, 0, 0, 245, 0, 126, 127, 233, 55, 246, 59, 90, 5, 216, 62, 132, 112, 249, 190, 134, 112, 121, 190, 79, 169, 211, 0, 183, 243, 154, 127, 167, 34, 36, 56, 192, 209, 105, 62, 71, 244, 34, 191, 234, 254, 6, 190, 45, 141, 230, 0, 144, 224, 207, 127, 188, 55, 247, 59, 94, 97, 176, 62, 121, 89, 1, 179, 248, 191, 24, 191, 63, 0, 147, 0, 149, 24, 194, 127, 118, 35, 29, 56, 247, 191, 24, 63, 121, 89, 1, 179, 97, 97, 176, 190, 109, 0, 193, 0, 194, 18, 148, 127, 7, 33, 29, 56, 90, 31, 13, 63, 232, 254, 134, 190, 72, 244, 162, 190, 102, 209, 198, 0, 186, 234, 153, 127, 87, 33, 32, 56, 69, 244, 162, 62, 230, 254, 134, 62, 91, 31, 13, 191, 58, 47, 154, 0, 144, 22, 202, 127, 173, 35, 27, 56, 128, 112, 121, 62, 132, 112, 249, 62, 92, 5, 216, 190, 45, 87, 177, 0, 149, 252, 189, 127, 238, 45, 53, 44, 90, 5, 216, 62, 132, 112, 249, 62, 134, 112, 121, 190, 79, 87, 211, 0, 157, 69, 219, 127, 225, 34, 195, 33, 90, 31, 13, 63, 230, 254, 134, 62, 72, 244, 162, 190, 102, 47, 198, 0, 185, 29, 156, 127, 143, 33, 25, 56, 190, 209, 105, 62, 71, 244, 34, 63, 234, 254, 6, 190, 45, 115, 230, 0, 160, 51, 63, 127, 82, 55, 66, 39, 128, 112, 249, 62, 132, 112, 249, 62, 211, 79, 206, 179, 91, 87, 0, 0, 180, 79, 194, 127, 74, 33, 210, 32, 70, 244, 34, 63, 230, 254, 134, 62, 123, 55, 162, 179, 117, 47, 0, 0, 244, 32, 134, 127, 152, 28, 22, 56, 226, 254, 134, 62, 71, 244, 34, 63, 255, 91, 228, 179, 52, 115, 0, 0, 179, 34, 94, 127, 76, 55, 22, 35, 227, 254, 134, 62, 71, 244, 34, 191, 255, 91, 228, 179, 52, 141, 0, 0, 160, 213, 187, 127, 191, 55, 254, 59, 70, 244, 34, 63, 232, 254, 134, 190, 123, 55, 162, 179, 117, 209, 0, 0, 233, 199, 146, 127, 186, 25, 34, 56, 128, 112, 249, 62, 132, 112, 249, 190, 211, 79, 206, 179, 91, 169, 0, 0, 212, 210, 147, 127, 114, 32, 40, 56, 94, 97, 48, 63, 121, 89, 1, 179, 211, 79, 206, 179, 127, 0, 0, 0, 0, 1, 130, 127, 75, 22, 28, 56, 227, 254, 134, 62, 71, 244, 34, 191, 255, 91, 228, 179, 52, 141, 0, 0, 91, 40, 78, 129, 1, 56, 249, 56, 190, 209, 105, 62, 71, 244, 34, 191, 220, 254, 6, 62, 45, 141, 26, 0, 118, 42, 241, 127, 8, 56, 243, 59, 128, 112, 249, 62, 132, 112, 249, 190, 211, 79, 206, 179, 91, 169, 0, 0, 86, 90, 18, 127, 197, 59, 11, 57, 70, 244, 34, 63, 232, 254, 134, 190, 123, 55, 162, 179, 117, 209, 0, 0, 25, 63, 150, 127, 231, 59, 1, 57, 90, 31, 13, 63, 232, 254, 134, 190, 67, 244, 162, 62, 102, 209, 58, 0, 75, 59, 173, 127, 194, 59, 248, 56, 90, 5, 216, 62, 132, 112, 249, 190, 121, 112, 121, 62, 79, 169, 45, 0, 99, 70, 219, 127, 179, 59, 0, 57, 94, 97, 48, 63, 121, 89, 1, 179, 211, 79, 206, 179, 127, 0, 0, 0, 0, 1, 130, 127, 248, 59, 241, 56, 70, 244, 34, 63, 230, 254, 134, 62, 123, 55, 162, 179, 117, 47, 0, 0, 11, 228, 133, 127, 241, 59, 223, 56, 90, 31, 13, 63, 230, 254, 134, 62, 67, 244, 162, 62, 102, 47, 58, 0, 65, 250, 148, 127, 196, 59, 229, 56, 246, 191, 24, 63, 121, 89, 1, 179, 90, 97, 176, 62, 109, 0, 63, 0, 62, 18, 148, 127, 200, 59, 239, 56, 128, 112, 249, 62, 132, 112, 249, 62, 211, 79, 206, 179, 91, 87, 0, 0, 44, 210, 147, 127, 206, 59, 252, 38, 226, 254, 134, 62, 71, 244, 34, 63, 255, 91, 228, 179, 52, 115, 0, 0, 115, 205, 251, 127, 2, 56, 24, 30, 190, 209, 105, 62, 71, 244, 34, 63, 219, 254, 6, 62, 45, 115, 26, 0, 116, 208, 15, 127, 0, 56, 89, 38, 90, 5, 216, 62, 132, 112, 249, 62, 121, 112, 121, 62, 79, 87, 45, 0, 174, 26, 92, 129, 181, 59, 56, 40, 226, 254, 6, 62, 71, 244, 34, 63, 183, 209, 105, 62, 26, 115, 45, 0, 118, 219, 27, 127, 242, 55, 165, 40, 126, 112, 121, 62, 132, 112, 249, 62, 87, 5, 216, 62, 45, 87, 79, 0, 153, 245, 72, 129, 247, 59, 42, 46, 126, 112, 121, 62, 132, 112, 249, 190, 87, 5, 216, 62, 45, 169, 79, 0, 46, 191, 158, 127, 157, 59, 20, 57, 225, 254, 6, 62, 71, 244, 34, 191, 183, 209, 105, 62, 26, 141, 45, 0, 124, 22, 243, 127, 4, 56, 234, 59, 93, 97, 176, 62, 121, 89, 1, 179, 245, 191, 24, 63, 63, 0, 109, 0, 93, 66, 202, 127, 172, 59, 238, 56, 69, 244, 162, 62, 232, 254, 134, 190, 89, 31, 13, 63, 58, 209, 102, 0, 8, 116, 49, 129, 170, 59, 244, 56, 69, 244, 162, 62, 230, 254, 134, 62, 89, 31, 13, 63, 58, 47, 102, 0, 22, 139, 41, 129, 170, 59, 231, 56, 151, 56, 7, 179, 132, 112, 249, 190, 125, 112, 249, 62, 0, 169, 91, 0, 120, 228, 229, 127, 119, 59, 140, 59, 157, 31, 60, 178, 71, 244, 34, 191, 223, 254, 134, 62, 0, 141, 52, 0, 123, 12, 28, 127, 0, 56, 228, 59, 151, 56, 7, 179, 121, 89, 1, 179, 92, 97, 48, 63, 0, 0, 127, 0, 125, 18, 0, 127, 158, 59, 92, 56, 151, 56, 7, 179, 232, 254, 134, 190, 68, 244, 34, 63, 0, 209, 117, 0, 121, 223, 243, 127, 134, 59, 17, 58, 151, 56, 7, 179, 132, 112, 249, 62, 125, 112, 249, 62, 0, 87, 91, 0, 107, 48, 210, 127, 149, 59, 194, 37, 151, 56, 7, 179, 230, 254, 134, 62, 68, 244, 34, 63, 0, 47, 117, 0, 98, 74, 227, 127, 97, 59, 111, 53, 211, 227, 59, 176, 71, 244, 34, 63, 223, 254, 134, 62, 0, 115, 52, 0, 116, 235, 46, 127, 224, 55, 140, 41, 151, 56, 7, 179, 230, 254, 134, 62, 68, 244, 34, 63, 0, 47, 117, 0, 119, 39, 241, 127, 125, 59, 63, 53, 151, 56, 7, 179, 132, 112, 249, 62, 125, 112, 249, 62, 0, 87, 91, 0, 255, 165, 87, 129, 60, 59, 79, 45, 226, 254, 6, 190, 71, 244, 34, 63, 182, 209, 105, 62, 230, 115, 45, 0, 86, 240, 91, 127, 206, 55, 22, 42, 227, 254, 6, 190, 71, 244, 34, 191, 182, 209, 105, 62, 230, 141, 45, 0, 92, 12, 85, 127, 247, 55, 224, 59, 71, 244, 162, 190, 232, 254, 134, 190, 89, 31, 13, 63, 198, 209, 102, 0, 109, 0, 63, 127, 12, 59, 69, 58, 130, 112, 121, 190, 132, 112, 249, 190, 87, 5, 216, 62, 211, 169, 79, 0, 114, 246, 54, 127, 203, 58, 149, 59, 151, 56, 7, 179, 230, 254, 134, 62, 68, 244, 34, 63, 0, 47, 117, 0, 126, 255, 0, 127, 126, 59, 68, 53, 71, 244, 162, 190, 230, 254, 134, 62, 89, 31, 13, 63, 198, 47, 102, 0, 109, 255, 63, 127, 247, 58, 182, 52, 95, 97, 176, 190, 121, 89, 1, 179, 245, 191, 24, 63, 193, 0, 109, 0, 109, 255, 63, 127, 22, 59, 83, 56, 130, 112, 121, 190, 132, 112, 249, 62, 87, 5, 216, 62, 211, 87, 79, 0, 166, 176, 36, 127, 169, 58, 250, 36, 157, 31, 60, 178, 71, 244, 34, 191, 223, 254, 134, 62, 0, 141, 52, 0, 123, 12, 27, 127, 169, 59, 228, 59, 227, 254, 6, 190, 71, 244, 34, 191, 182, 209, 105, 62, 230, 141, 45, 0, 112, 254, 58, 127, 99, 58, 224, 59, 151, 56, 7, 179, 132, 112, 249, 62, 125, 112, 249, 62, 0, 87, 91, 0, 123, 236, 19, 127, 239, 59, 95, 32, 130, 112, 121, 190, 132, 112, 249, 62, 87, 5, 216, 62, 211, 87, 79, 0, 106, 250, 68, 127, 174, 58, 56, 37, 91, 31, 13, 191, 232, 254, 134, 190, 66, 244, 162, 62, 154, 209, 58, 0, 61, 6, 111, 127, 119, 57, 9, 58, 91, 5, 216, 190, 132, 112, 249, 190, 119, 112, 121, 62, 177, 169, 45, 0, 62, 1, 110, 127, 95, 57, 182, 59, 91, 31, 13, 191, 230, 254, 134, 62, 66, 244, 162, 62, 154, 47, 58, 0, 61, 252, 110, 127, 97, 57, 18, 53, 247, 191, 24, 191, 121, 89, 1, 179, 89, 97, 176, 62, 147, 0, 63, 0, 63, 2, 109, 127, 117, 57, 74, 56, 190, 209, 105, 190, 71, 244, 34, 63, 218, 254, 6, 62, 211, 115, 26, 0, 7, 231, 124, 127, 188, 55, 97, 42, 91, 5, 216, 190, 132, 112, 249, 62, 119, 112, 121, 62, 177, 87, 45, 0, 26, 218, 118, 127, 58, 57, 90, 44, 190, 209, 105, 190, 71, 244, 34, 191, 218, 254, 6, 62, 211, 141, 26, 0, 48, 7, 117, 127, 36, 57, 222, 59, 190, 209, 105, 190, 71, 244, 34, 191, 218, 254, 6, 62, 211, 141, 26, 0, 53, 5, 115, 127, 238, 55, 222, 59, 129, 112, 249, 190, 132, 112, 249, 190, 109, 76, 41, 180, 165, 169, 0, 0, 0, 0, 126, 127, 5, 56, 164, 59, 226, 254, 134, 190, 71, 244, 34, 191, 43, 104, 250, 179, 204, 141, 0, 0, 8, 253, 126, 127, 214, 55, 221, 59, 94, 97, 48, 191, 121, 89, 1, 179, 109, 76, 41, 180, 129, 0, 0, 0, 0, 2, 126, 127, 230, 55, 68, 56, 70, 244, 34, 191, 232, 254, 134, 190, 65, 64, 19, 180, 139, 209, 0, 0, 0, 1, 126, 127, 253, 55, 245, 57, 129, 112, 249, 190, 132, 112, 249, 62, 109, 76, 41, 180, 165, 87, 0, 0, 0, 0, 126, 127, 193, 55, 72, 45, 70, 244, 34, 191, 230, 254, 134, 62, 65, 64, 19, 180, 139, 47, 0, 0, 0, 2, 126, 127, 208, 55, 40, 53, 226, 254, 134, 190, 71, 244, 34, 63, 43, 104, 250, 179, 204, 115, 0, 0, 248, 253, 126, 127, 170, 55, 123, 42, 226, 254, 134, 190, 71, 244, 34, 191, 43, 104, 250, 179, 204, 141, 0, 0, 1, 0, 126, 127, 230, 55, 221, 59, 245, 191, 24, 191, 121, 89, 1, 179, 99, 97, 176, 190, 147, 0, 193, 0, 193, 2, 109, 127, 226, 52, 63, 56, 90, 31, 13, 191, 232, 254, 134, 190, 75, 244, 162, 190, 154, 209, 198, 0, 195, 252, 110, 127, 10, 53, 0, 58, 90, 5, 216, 190, 132, 112, 249, 62, 140, 112, 121, 190, 177, 87, 211, 0, 237, 43, 117, 127, 14, 53, 67, 44, 90, 31, 13, 191, 230, 254, 134, 62, 75, 244, 162, 190, 154, 47, 198, 0, 196, 9, 111, 127, 221, 52, 255, 52, 190, 209, 105, 190, 71, 244, 34, 63, 234, 254, 6, 190, 211, 115, 230, 0, 214, 10, 119, 127, 152, 55, 106, 42, 190, 209, 105, 190, 71, 244, 34, 191, 234, 254, 6, 190, 211, 141, 230, 0, 206, 250, 116, 127, 221, 55, 222, 59, 90, 5, 216, 190, 132, 112, 249, 190, 140, 112, 121, 190, 177, 169, 211, 0, 187, 7, 106, 127, 87, 53, 180, 59, 190, 209, 105, 190, 71, 244, 34, 191, 234, 254, 6, 190, 211, 141, 230, 0, 182, 5, 102, 127, 105, 53, 222, 59, 225, 254, 6, 190, 71, 244, 34, 191, 197, 209, 105, 190, 230, 141, 211, 0, 167, 242, 88, 127, 212, 55, 225, 59, 69, 244, 162, 190, 232, 254, 134, 190, 92, 31, 13, 191, 198, 209, 154, 0, 146, 3, 62, 127, 112, 47, 45, 58, 126, 112, 121, 190, 132, 112, 249, 190, 95, 5, 216, 190, 211, 169, 177, 0, 140, 18, 47, 127, 243, 48, 141, 59, 69, 244, 162, 190, 230, 254, 134, 62, 92, 31, 13, 191, 198, 47, 154, 0, 147, 0, 63, 127, 208, 46, 134, 52, 91, 97, 176, 190, 121, 89, 1, 179, 247, 191, 24, 191, 193, 0, 147, 0, 147, 0, 63, 127, 124, 46, 54, 56, 225, 254, 6, 190, 71, 244, 34, 63, 197, 209, 105, 190, 230, 115, 211, 0, 3, 46, 118, 127, 134, 55, 41, 42, 126, 112, 121, 190, 132, 112, 249, 62, 95, 5, 216, 190, 211, 87, 177, 0, 182, 45, 92, 127, 108, 48, 19, 36, 225, 254, 6, 190, 71, 244, 34, 191, 197, 209, 105, 190, 230, 141, 211, 0, 147, 0, 63, 127, 236, 49, 225, 59, 121, 89, 1, 51, 230, 254, 134, 62, 71, 244, 34, 191, 0, 47, 139, 0, 130, 10, 4, 127, 9, 44, 161, 52, 0, 0, 0, 0, 71, 244, 34, 191, 231, 254, 134, 190, 0, 141, 204, 0, 136, 240, 35, 127, 161, 39, 229, 59 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 3, 0, 0, 0, 12, 0, 13, 0, 3, 0, 14, 0, 7, 0, 4, 0, 14, 0, 15, 0, 7, 0, 16, 0, 17, 0, 8, 0, 16, 0, 18, 0, 17, 0, 9, 0, 10, 0, 19, 0, 20, 0, 13, 0, 12, 0, 13, 0, 21, 0, 3, 0, 13, 0, 22, 0, 21, 0, 2, 0, 24, 0, 23, 0, 2, 0, 25, 0, 24, 0, 26, 0, 28, 0, 27, 0, 26, 0, 29, 0, 28, 0, 10, 0, 30, 0, 19, 0, 20, 0, 22, 0, 13, 0, 3, 0, 25, 0, 2, 0, 3, 0, 21, 0, 25, 0, 23, 0, 29, 0, 26, 0, 23, 0, 24, 0, 29, 0, 11, 0, 30, 0, 10, 0, 11, 0, 28, 0, 30, 0, 29, 0, 31, 0, 28, 0, 29, 0, 32, 0, 31, 0, 30, 0, 33, 0, 19, 0, 20, 0, 34, 0, 22, 0, 21, 0, 35, 0, 25, 0, 21, 0, 36, 0, 35, 0, 24, 0, 32, 0, 29, 0, 24, 0, 37, 0, 32, 0, 28, 0, 33, 0, 30, 0, 28, 0, 31, 0, 33, 0, 22, 0, 36, 0, 21, 0, 22, 0, 34, 0, 36, 0, 25, 0, 37, 0, 24, 0, 25, 0, 35, 0, 37, 0, 20, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 40, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 38, 0, 43, 0, 40, 0, 38, 0, 39, 0, 43, 0, 41, 0, 47, 0, 44, 0, 41, 0, 42, 0, 47, 0, 45, 0, 51, 0, 48, 0, 45, 0, 46, 0, 51, 0, 49, 0, 50, 0, 19, 0, 51, 0, 52, 0, 50, 0, 51, 0, 53, 0, 52, 0, 39, 0, 54, 0, 43, 0, 39, 0, 55, 0, 54, 0, 42, 0, 56, 0, 47, 0, 42, 0, 57, 0, 56, 0, 46, 0, 53, 0, 51, 0, 46, 0, 58, 0, 53, 0, 50, 0, 52, 0, 19, 0, 20, 0, 55, 0, 39, 0, 43, 0, 57, 0, 42, 0, 43, 0, 54, 0, 57, 0, 47, 0, 58, 0, 46, 0, 47, 0, 56, 0, 58, 0, 55, 0, 59, 0, 54, 0, 55, 0, 60, 0, 59, 0, 57, 0, 61, 0, 56, 0, 57, 0, 62, 0, 61, 0, 58, 0, 63, 0, 53, 0, 58, 0, 64, 0, 63, 0, 52, 0, 65, 0, 19, 0, 20, 0, 60, 0, 55, 0, 54, 0, 62, 0, 57, 0, 54, 0, 59, 0, 62, 0, 56, 0, 66, 0, 58, 0, 56, 0, 61, 0, 66, 0, 53, 0, 65, 0, 52, 0, 53, 0, 67, 0, 65, 0, 65, 0, 68, 0, 19, 0, 20, 0, 69, 0, 60, 0, 59, 0, 70, 0, 62, 0, 59, 0, 71, 0, 70, 0, 61, 0, 73, 0, 72, 0, 61, 0, 74, 0, 73, 0, 67, 0, 68, 0, 65, 0, 67, 0, 75, 0, 68, 0, 76, 0, 71, 0, 59, 0, 76, 0, 77, 0, 71, 0, 62, 0, 74, 0, 61, 0, 62, 0, 70, 0, 74, 0, 72, 0, 79, 0, 78, 0, 72, 0, 73, 0, 79, 0, 71, 0, 80, 0, 70, 0, 71, 0, 81, 0, 80, 0, 74, 0, 82, 0, 73, 0, 74, 0, 83, 0, 82, 0, 75, 0, 84, 0, 68, 0, 75, 0, 85, 0, 84, 0, 77, 0, 81, 0, 71, 0, 77, 0, 86, 0, 81, 0, 70, 0, 83, 0, 74, 0, 70, 0, 80, 0, 83, 0, 73, 0, 85, 0, 79, 0, 73, 0, 82, 0, 85, 0, 68, 0, 84, 0, 19, 0, 20, 0, 87, 0, 69, 0, 86, 0, 88, 0, 81, 0, 86, 0, 89, 0, 88, 0, 80, 0, 90, 0, 83, 0, 80, 0, 91, 0, 90, 0, 82, 0, 92, 0, 85, 0, 82, 0, 93, 0, 92, 0, 84, 0, 94, 0, 19, 0, 20, 0, 95, 0, 87, 0, 81, 0, 91, 0, 80, 0, 81, 0, 88, 0, 91, 0, 83, 0, 93, 0, 82, 0, 83, 0, 90, 0, 93, 0, 85, 0, 94, 0, 84, 0, 85, 0, 92, 0, 94, 0, 91, 0, 96, 0, 90, 0, 91, 0, 97, 0, 96, 0, 93, 0, 98, 0, 92, 0, 93, 0, 99, 0, 98, 0, 94, 0, 100, 0, 19, 0, 20, 0, 101, 0, 95, 0, 88, 0, 97, 0, 91, 0, 88, 0, 102, 0, 97, 0, 90, 0, 99, 0, 93, 0, 90, 0, 96, 0, 99, 0, 92, 0, 100, 0, 94, 0, 92, 0, 98, 0, 100, 0, 89, 0, 102, 0, 88, 0, 89, 0, 103, 0, 102, 0, 20, 0, 104, 0, 101, 0, 102, 0, 105, 0, 97, 0, 102, 0, 106, 0, 105, 0, 96, 0, 107, 0, 99, 0, 96, 0, 108, 0, 107, 0, 98, 0, 109, 0, 100, 0, 98, 0, 110, 0, 109, 0, 103, 0, 106, 0, 102, 0, 103, 0, 111, 0, 106, 0, 97, 0, 108, 0, 96, 0, 97, 0, 105, 0, 108, 0, 99, 0, 110, 0, 98, 0, 99, 0, 107, 0, 110, 0, 100, 0, 109, 0, 19, 0, 108, 0, 112, 0, 107, 0, 108, 0, 4, 0, 112, 0, 110, 0, 9, 0, 109, 0, 110, 0, 8, 0, 9, 0, 111, 0, 0, 0, 106, 0, 111, 0, 113, 0, 0, 0, 105, 0, 4, 0, 108, 0, 105, 0, 14, 0, 4, 0, 107, 0, 8, 0, 110, 0, 107, 0, 112, 0, 8, 0, 109, 0, 9, 0, 19, 0, 20, 0, 12, 0, 104, 0, 106, 0, 1, 0, 105, 0, 106, 0, 0, 0, 1, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 504,
"material": SubResource( 2 ),
"name": "Material",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 114
}

[node name="3dCC" type="KinematicBody" groups=[
"Saved",
]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )
acceleration = 1.1
friction = 1.34

[node name="UpperCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.25, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="UpperCollider"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -1.09278e-08, 0.25 )
cull_mask = 23
current = true
far = 400.0

[node name="Toy Soldier New Head" type="Spatial" parent="UpperCollider/Camera"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0.124163, 0.022676 )
visible = false

[node name="New Head" type="MeshInstance" parent="UpperCollider/Camera/Toy Soldier New Head"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="RayCast" type="RayCast" parent="UpperCollider/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -500 )

[node name="LowerCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.25, 0 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="HUD" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="ColorRect" parent="HUD"]
material = ExtResource( 2 )
margin_right = 1032.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground_Detector" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.381659, 0 )
enabled = true
cast_to = Vector3( 0, -0.8, 0 )
